# carton

./: README.en.md  README.md  carton.slnx
.github/: release-template.md
.github/workflows/: publish-direct.yml  publish.yml  winget-submit.yml
scripts/: build-portable-linux.sh  build-portable-win-x64.bat  build-portable-win-x64.ps1  build-release-win-x64.ps1
scripts/installer/windows/: carton-installer.nsi
src/carton.Core/: carton.Core.csproj
src/carton.Core/Models/: ApiModeConfigSnapshot.cs  AppPreferences.cs  KernelLogEntry.cs  ServiceState.cs  WindowsHelperContracts.cs
src/carton.Core/Serialization/: CartonCoreJsonContext.cs
src/carton.Core/Services/: AcceleratedFileDownloader.cs  ApiPortPlanner.cs  GitHubReleaseSources.cs  HttpClientFactory.cs  KernelManager.cs  LoopbackPortAllocator.cs  PreferencesService.cs  ProfileManager.cs  SingBoxManager.Api.cs  SingBoxManager.Elevated.cs  SingBoxManager.Linux.cs  SingBoxManager.MacOS.cs  SingBoxManager.Monitoring.cs  SingBoxManager.Windows.cs  SingBoxManager.cs  TunInboundDefaults.cs  WindowsElevatedHelperHost.cs  WindowsElevatedHelperTaskUtility.cs
src/carton.Core/Utilities/: CartonApplicationInfo.cs  FormatHelper.cs  PathHelper.cs
src/carton.GUI/: App.axaml  App.axaml.cs  app.manifest  carton.GUI.csproj
src/carton.GUI.Benchmarks/: Program.cs  carton.GUI.Benchmarks.csproj
src/carton.GUI.Tests/: carton.GUI.Tests.csproj
src/carton.GUI.Tests/Controls/: JsonSyntaxTests.cs  (+1 more)
src/carton.Helper/: Cargo.toml
src/carton.Helper/src/helper/: process.rs
src/carton.Updater/: Program.cs  carton.Updater.csproj
(+52 files in other folders)
